--- a/operator_inversion/operator_inversion.ipynb
+++ b/operator_inversion/operator_inversion.ipynb
@@ -115,7 +115,24 @@
     "    for i, ax in zip(steps, axes):\n",
     "        ax.imshow(x[batch,..., i])\n",
     "    plt.tight_layout()\n",
-    "    return fig\n"
+    "    return fig\n",
+    "\n",
+    "def multi_img_batch(x, interval=1, n_cols=None, fsize=6):\n",
+    "    \"\"\"\n",
+    "    Plot multiple batches of an array \n",
+    "    \"\"\"\n",
+    "    steps = range(0, x.shape[0], interval)\n",
+    "    if n_cols is None:\n",
+    "        n_cols = len(steps)\n",
+    "    n_rows = ceil(len(steps) / n_cols)\n",
+    "    fig, axes = plt.subplots(n_rows, n_cols, figsize=(fsize * n_cols/n_rows, fsize));\n",
+    "    axes = axes.flatten()\n",
+    "    for ax in axes:\n",
+    "        ax.set_axis_off()\n",
+    "    for i, ax in zip(steps, axes):\n",
+    "        ax.imshow(x[..., i])\n",
+    "    plt.tight_layout()\n",
+    "    return fig"
    ]
   },
   {
@@ -177,7 +194,9 @@
     "obs = get_obs(data, 0, 10)\n",
     "\n",
     "with torch.no_grad():\n",
-    "    pred = predict_forward(obs['x'], obs['latent'], n_horizon=100, n_steps=2)"
+    "    pred = predict_forward(obs['x'], obs['latent'], n_horizon=100, n_steps=2)\n",
+    "\n",
+    "multi_img_time(pred.cpu().numpy(), n_cols=5, interval=5);\n"
    ]
   },
   {
@@ -241,7 +260,6 @@
     "def fit(\n",
     "        batch,\n",
     "        model,\n",
-    "        loss_fn,\n",
     "        optimizer,\n",
     "        n_iter: int=20,\n",
     "        check_int: int=1,\n",
@@ -249,6 +267,8 @@
     "        callback = lambda *x: None):\n",
     "    model.train()\n",
     "    model.weights_init()\n",
+    "    loss_fn = nn.MSELoss()\n",
+    "    big_loss_fn = nn.MSELoss(reduction='none')\n",
     "    scale = loss_fn(torch.zeros_like(batch['latent']), batch['latent']).item()\n",
     "    for i in range(n_iter):\n",
     "        # Compute prediction error\n",
@@ -266,29 +286,24 @@
     "\n",
     "        if i % check_int == 0 or i==n_iter-1:\n",
     "            with torch.no_grad():\n",
-    "                loss_v = loss.detach().item()    \n",
-    "                big_loss_v = big_loss_fn(pred['forecast'], batch['y']).mean((1,2,3))\n",
-    "                big_error = big_loss_fn(model.latent, batch['latent']).mean((1,2))\n",
+    "                loss_v = loss.item()\n",
+    "                # batchwise error\n",
+    "                big_loss_v = big_loss_fn(pred['forecast'], batch['y']).mean(dim=(1,2,3))\n",
+    "                big_error = big_loss_fn(model.latent, batch['latent']).mean(dim=(1,2))\n",
     "                big_relerr = torch.sqrt(big_error/scale)\n",
-    "\n",
+    "                error = big_error.mean().item()\n",
+    "                relerr = sqrt(big_relerr.mean().item())\n",
     "                print(\n",
     "                    f\"loss: {loss:.3e}, error: {error:.3e}, relerror: {relerr:.3e} [{i:>5d}/{n_iter:>5d}]\")\n",
-    "                callback(model, i, loss_v, error, loss_fn, batch, pred)\n",
-    "        # target =  batch['latent'][0, :, :].cpu().numpy()\n",
-    "        # est =  model.latent[0, :, :].cpu().numpy()\n",
-    "        # err_heatmap = target - est\n",
-    "        # fig = heatmap.multi_heatmap(\n",
-    "        #     [target, est, err_heatmap],\n",
-    "        #     [\"Target\", \"Estimate\", \"Error\"], *args, **kwargs)\n",
-    "        # plt.show();\n",
-    "        # plt.close(\"all\");\n",
     "\n",
-    "        loss_v = loss.item()\n",
-    "        error = loss_fn(model.latent, batch['latent']).item()\n",
-    "        scale = loss_fn(torch.zeros_like(batch['latent']), batch['latent']).item()\n",
-    "        relerr = sqrt(error/scale)\n",
-    "        print(\n",
-    "            f\"loss: {loss:.3e}, error: {error:.3e}, relerror: {relerr:.3e} scale: {scale:.3e}[{i:>5d}/{n_iter:>5d}]\")\n",
+    "                target =  batch['latent'][0, :, :].cpu().numpy()\n",
+    "                est =  model.latent[0, :, :].cpu().numpy()\n",
+    "                err_heatmap = target - est\n",
+    "                fig = multi_heatmap(\n",
+    "                    [target, est, err_heatmap],\n",
+    "                    [\"Target\", \"Estimate\", \"Error\"])\n",
+    "                plt.show();\n",
+    "                plt.close(\"all\");\n",
     "\n",
     "    return loss_v, error, relerr, scale\n"
    ]
@@ -313,12 +328,136 @@
     "fit(\n",
     "    dict_as_tensor(get_obs(data,t=0,n_steps=2,y=True)),\n",
     "    model,\n",
-    "    loss_fn,\n",
     "    optimizer,\n",
-    "    n_iter=200,\n",
-    "    check_int=5,\n",
+    "    n_iter=50,\n",
+    "    check_int=10,\n",
     "    clip_val=None,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = RasterLatent(\n",
+    "    process_predictor,\n",
+    "    dims=obs['x'].shape[1:3],\n",
+    "    n_batch=1)\n",
+    "optimizer = AdamW(\n",
+    "    model.parameters(),\n",
+    "    lr=0.00025,\n",
+    "    weight_decay=10)\n",
+    "\n",
+    "loss_fn = nn.MSELoss()\n",
+    "\n",
+    "fit(\n",
+    "    dict_as_tensor(get_obs(data,t=0,n_steps=2,y=True)),\n",
+    "    model,\n",
+    "    optimizer,\n",
+    "    n_iter=50,\n",
+    "    check_int=10,\n",
+    "    clip_val=None,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Probabilistic version\n",
+    "\n",
+    "* [Modules in Pyro — Pyro Tutorials](https://pyro.ai/examples/modules.html)\n",
+    "* [Neural Networks — Pyro documentation](https://docs.pyro.ai/en/stable/nn.html#pyro.nn.module.PyroSample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyro\n",
+    "from pyro.nn import PyroModule, PyroParam, PyroSample\n",
+    "from pyro.nn.module import to_pyro_module_\n",
+    "import pyro.distributions as dist\n",
+    "from pyro.infer import SVI, Trace_ELBO, Predictive, MCMC, NUTS\n",
+    "from pyro import poutine\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ProbRasterLatent(PyroModule):\n",
+    "    def __init__(\n",
+    "            self,\n",
+    "            process_predictor: \"nn.Module\",\n",
+    "            dims = (256,256),\n",
+    "            prior_scale = 0.01,\n",
+    "            obs_scale = 0.01,):\n",
+    "        super().__init__()\n",
+    "        self.dims = dims\n",
+    "        self.prior_scale = prior_scale\n",
+    "        self.obs_scale = obs_scale\n",
+    "        self.process_predictor = process_predictor\n",
+    "        process_predictor.train(False)\n",
+    "        ## Do not fit the process predictor weights\n",
+    "        for param in self.process_predictor.parameters():\n",
+    "            param.requires_grad = False\n",
+    "        self.latent = PyroSample(dist.Normal(0, 0.01).expand(dims).to_event(2))\n",
+    "\n",
+    "    def forward(self, X, y=None):\n",
+    "        #overwrite process predictor batch with my own latent\n",
+    "        mean = self.process_predictor({\n",
+    "            'x': X,\n",
+    "            'latent': self.latent.unsqueeze(0),\n",
+    "        })['forecast']\n",
+    "        return pyro.sample(\n",
+    "            \"obs\", dist.Normal(mean, self.obs_scale).to_event(2),\n",
+    "            obs=y)\n",
+    "\n",
+    "model = ProbRasterLatent(\n",
+    "    process_predictor,\n",
+    "    dims=obs['x'].shape[1:3],\n",
+    "    prior_scale=0.01,\n",
+    "    obs_scale=0.01,\n",
+    ")\n",
+    "\n",
+    "nuts_kernel = NUTS(model, full_mass=False, max_tree_depth=5, jit_compile=True) # high performacne params\n",
+    "\n",
+    "mcmc = MCMC(nuts_kernel, num_samples=100, warmup_steps=100)\n",
+    "obs = get_obs(data, 0, 2, y=True)\n",
+    "mcmc.run(torch.as_tensor(obs['x']), torch.as_tensor(obs['y']))\n",
+    "mc_samples = {k: v.detach().cpu().numpy() for k, v in mcmc.get_samples().items()}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savez_compressed(\"data/samples1.npz\", mc_samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multi_img_batch(mc_samples['latent'], interval=20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## offcuts"
    ]
   },
   {
@@ -333,10 +472,12 @@
     "    TODO.\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, modes: int=20, dims: Tuple[int, int]=(256,256)):\n",
+    "    def __init__(self, modes: int=20, dims=(256,256), prior_scale=0.01, obs_scale=0.01):\n",
     "        super().__init__()\n",
     "        self.modes = modes  # maybe just normalize the weights?\n",
     "        self.dims = dims\n",
+    "        self.prior_scale = prior_scale\n",
+    "        self.obs_scale = obs_scale\n",
     "\n",
     "    def forward(self, X):\n",
     "        \"\"\"\n",
@@ -352,21 +493,6 @@
     "        return fft.rfft2(Xp, s=self.dims, norm=\"ortho\")\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Probabilistic version\n",
-    "\n",
-    "http://pyro.ai/examples/mle_map.html\n",
-    "http://pyro.ai/examples/modules.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
