regression notebook runs

--- a/primitives/05-regression_with_data.ipynb
+++ b/primitives/05-regression_with_data.ipynb
@@ -70,44 +70,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Utility function to print latent sites' quantile information.\n",
-    "def summary(samples):\n",
-    "    site_stats = {}\n",
-    "    for site_name, values in samples.items():\n",
-    "        marginal_site = pd.DataFrame(values)\n",
-    "        describe = marginal_site.describe(percentiles=[.05, 0.25, 0.5, 0.75, 0.95]).transpose()\n",
-    "        site_stats[site_name] = describe[[\"mean\", \"std\", \"5%\", \"25%\", \"50%\", \"75%\", \"95%\"]]\n",
-    "    return site_stats\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "(Linear) regression model capturing a predictor variables (Africa or not, Terrain roughness) and a response variable (GDP), and an interaction term."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pyro.clear_param_store()\n",
-    "def model(is_cont_africa, ruggedness, log_gdp):\n",
-    "    a = pyro.sample(\"a\", dist.Normal(0., 10.))\n",
-    "    b_a = pyro.sample(\"bA\", dist.Normal(0., 1.))\n",
-    "    b_r = pyro.sample(\"bR\", dist.Normal(0., 1.))\n",
-    "    b_ar = pyro.sample(\"bAR\", dist.Normal(0., 1.))\n",
-    "    sigma = pyro.sample(\"sigma\", dist.Gamma(1.0, 0.5)) \n",
-    "    with pyro.plate(\"data\", len(ruggedness)):\n",
-    "        mean = a + b_a * is_cont_africa + b_r * ruggedness + b_ar * is_cont_africa * ruggedness\n",
-    "        pyro.sample(\"log_gdp\", dist.Normal(mean, sigma), obs=log_gdp)"
    ]
   },
   {
@@ -124,13 +90,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "nuts_kernel = NUTS(model)\n",
     "\n",
@@ -141,28 +100,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "pyro.clear_param_store()\n",
-    "def model3(is_cont_africa, ruggedness):\n",
-    "    a = pyro.sample(\"a\", dist.Normal(0., 10.))\n",
-    "    b_a = pyro.sample(\"bA\", dist.Normal(0., 1.))\n",
-    "    b_r = pyro.sample(\"bR\", dist.Normal(0., 1.))\n",
-    "    b_ar = pyro.sample(\"bAR\", dist.Normal(0., 1.))\n",
-    "    sigma = pyro.sample(\"sigma\", dist.Gamma(1.0, 0.5)) \n",
-    "    # with pyro.plate(\"data\", len(ruggedness)):\n",
-    "    is_cont_africa = pyro.deterministic(\"is_cont_africa\", is_cont_africa)\n",
-    "    ruggedness = pyro.deterministic(\"ruggedness\", ruggedness)\n",
-    "    mean = a + b_a * is_cont_africa + b_r * ruggedness + b_ar * is_cont_africa * ruggedness\n",
-    "    s = pyro.sample(\"log_gdp\", dist.Normal(mean, sigma))\n",
-    "    return s\n",
-    "\n",
-    "trace = poutine.trace(model2).get_trace(is_cont_africa, ruggedness)\n",
-    "trace.compute_log_prob()  # optional, but allows printing of log_prob shapes\n",
-    "print(trace.format_shapes())"
+    "For this we need to use the `Predictive` class, which is not well explained in the docs.\n",
+    "An only-slightly-confusing explanation is [here](http://pyro.ai/examples/bayesian_regression.html#Model-Evaluation)."
    ]
   },
   {
@@ -172,36 +114,18 @@
    "outputs": [],
    "source": [
     "pyro.clear_param_store()\n",
-    "def model2():\n",
+    "def model():\n",
     "    a = pyro.sample(\"a\", dist.Normal(0., 10.))\n",
     "    b_a = pyro.sample(\"bA\", dist.Normal(0., 1.))\n",
     "    b_r = pyro.sample(\"bR\", dist.Normal(0., 1.))\n",
     "    b_ar = pyro.sample(\"bAR\", dist.Normal(0., 1.))\n",
     "    sigma = pyro.sample(\"sigma\", dist.Gamma(1.0, 0.5)) \n",
-    "    # is_cont_africa = pyro.deterministic(\"is_cont_africa\", torch.tensor(0.))\n",
-    "    # ruggedness = pyro.deterministic(\"ruggedness\", torch.tensor(0.))\n",
-    "    # is_cont_africa = pyro.sample(\"is_cont_africa\", dist.Delta(torch.tensor(0.)))\n",
-    "    # ruggedness = pyro.sample(\"ruggedness\", dist.Delta(torch.tensor(0.)))\n",
-    "    is_cont_africa = pyro.sample(\"is_cont_africa\", dist.Normal(0.5, 0.5))\n",
-    "    ruggedness = pyro.sample(\"ruggedness\", dist.Normal(0.5, 0.5))\n",
+    "    is_cont_africa = pyro.sample(\"is_cont_africa\", dist.Bernoulli(0.5))\n",
+    "    ruggedness = pyro.sample(\"ruggedness\", dist.Normal(1.0, 0.5))\n",
     "    mean = a + b_a * is_cont_africa + b_r * ruggedness + b_ar * is_cont_africa * ruggedness\n",
     "    s = pyro.sample(\"log_gdp\", dist.Normal(mean, sigma))\n",
     "    return s\n",
-    "\n",
-    "trace = poutine.trace(model2).get_trace()\n",
-    "# trace.compute_log_prob()  # optional, but allows printing of log_prob shapes\n",
-    "print(trace.format_shapes())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trace = poutine.trace(poutine.condition(model2, data={\"log_gdp\": log_gdp, \"ruggedness\":ruggedness, \"is_cont_africa\": is_cont_africa})).get_trace()\n",
-    "# trace.compute_log_prob()  # optional, but allows printing of log_prob shapes\n",
-    "print(trace.format_shapes())"
+    "\n"
    ]
   },
   {
@@ -211,7 +135,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "observed_model = poutine.condition(model2, data={\n",
+    "observed_model = poutine.condition(model, data={\n",
     "    \"log_gdp\": log_gdp, \"ruggedness\": ruggedness, \"is_cont_africa\": is_cont_africa})\n",
     "nuts_kernel = NUTS(observed_model)\n",
     "\n",
@@ -236,9 +160,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for site, values in summary(hmc_samples).items():\n",
-    "    print(\"Site: {}\".format(site))\n",
-    "    print(values, \"\\n\")"
+    "colors = sns.color_palette()\n",
+    "swiss_rugged = rugged_data[rugged_data['country']=='Switzerland']['rugged'].item()\n",
+    "belgian_rugged = rugged_data[rugged_data['country']=='Belgium']['rugged'].item()\n",
+    "swiss_loggdp = np.log(rugged_data[rugged_data['country']=='Switzerland']['rgdppc_2000'].item())\n",
+    "belgian_loggdp = np.log(rugged_data[rugged_data['country']=='Belgium']['rgdppc_2000'].item())\n",
+    "\n",
+    "switzerland2_gdp = Predictive(poutine.condition(model, data={\n",
+    "    \"ruggedness\": torch.tensor(swiss_rugged), \"is_cont_africa\": torch.tensor(0.)}), posterior_samples=mcmc.get_samples())()['log_gdp']\n",
+    "belgium2_gdp = Predictive(poutine.condition(model, data={\n",
+    "    \"ruggedness\": torch.tensor(belgian_rugged), \"is_cont_africa\": torch.tensor(0.)}), posterior_samples=mcmc.get_samples())()['log_gdp']\n",
+    "sns.kdeplot(switzerland2_gdp, label=\"Switzerland 2.0 log GDP\", color=colors[0])\n",
+    "sns.kdeplot(belgium2_gdp, label=\"Belgium 2.0 log GDP\", color=colors[1])\n",
+    "plt.vlines(swiss_loggdp, 0, 0.5, label=\"Switzerland 1.0 log GDP\", linestyle=\"dashed\", color=colors[0])\n",
+    "plt.vlines(belgian_loggdp, 0, 0.5, label=\"Belgium 1.0 log GDP\", linestyle=\"dotted\", color=colors[1])\n",
+    "plt.legend()"
    ]
   },
   {
@@ -247,82 +183,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Predictive(poutine.condition(model2, data={\n",
-    "    \"ruggedness\": torch.tensor(1000.0), \"is_cont_africa\": torch.tensor(0.)}), posterior_samples=mcmc.get_samples())()['log_gdp']\n"
+    "trace = poutine.trace(model).get_trace()\n",
+    "print(trace.format_shapes())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Predictive(poutine.condition(model2, data={\n",
-    "    \"ruggedness\": torch.tensor(0.0), \"is_cont_africa\": torch.tensor(0.)}), posterior_samples=mcmc.get_samples())()['log_gdp']\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Predictive(poutine.condition(model2, data={\n",
-    "    \"log_gdp\": torch.tensor(0.0), \"is_cont_africa\": torch.tensor(0.)}), posterior_samples=mcmc.get_samples())()['ruggedness']\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictive = Predictive(model2, posterior_samples=mcmc.get_samples())\n",
-    "predictive(is_cont_africa, ruggedness, log_gdp)['gdp']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For this we need to use the `Predictive` class, which is not well explained in the docs.\n",
-    "An only-slightly-confusing explanation is [here](http://pyro.ai/examples/bayesian_regression.html#Model-Evaluation)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictive = Predictive(model, posterior_samples=mcmc.get_samples())\n",
-    "predictive(is_cont_africa, ruggedness, log_gdp)['obs']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictive(torch.tensor(1.), torch.tensor(1.))['obs']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mcmc.get_samples().keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
