--- a/operator_inversion/operator_inversion.ipynb
+++ b/operator_inversion/operator_inversion.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inference in a PDE model\n",
+    "# Inference in a neural emulation model\n",
     "\n"
    ]
   },
@@ -63,8 +63,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_file = h5py.File(resolve_path('./data/grf_forcing_pico.h5'))\n",
-    "data = data_file['valid']\n",
+    "# data_file = h5py.File(resolve_path('./data/grf_forcing_pico.h5'))\n",
+    "# data = data_file['valid']\n",
+    "data = np.load('./data/grf_forcing_single.npz')\n",
     "\n",
     "def get_obs(data, t=0, n_steps=2, y=False):\n",
     "    x = data['u'][..., t:t+n_steps]\n",
@@ -89,7 +90,7 @@
     "    \"\"\"\n",
     "    it was faster to write this function than to search the docs for it\n",
     "    \"\"\"\n",
-    "    return {k: torch.from_numpy(v).to(device) for k, v in d.items()}"
+    "    return {k: torch.as_tensor(v).to(device) for k, v in d.items()}"
    ]
   },
   {
@@ -141,16 +142,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = get_obs(data, 0, 8)['x']\n",
+    "arr = get_obs(data, 0, 50)['x']\n",
     "\n",
-    "multi_img_time(arr, n_cols=2);\n"
+    "multi_img_time(arr, n_cols=4, interval=5);\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## We have a process predictor model"
+    "## Process predictor model"
    ]
   },
   {
@@ -197,6 +198,17 @@
     "    pred = predict_forward(obs['x'], obs['latent'], n_horizon=100, n_steps=2)\n",
     "\n",
     "multi_img_time(pred.cpu().numpy(), n_cols=5, interval=5);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs = get_obs(data, 0, 10)\n",
+    "obs['latent'].shape\n",
+    "obs['x'].shape"
    ]
   },
   {
@@ -427,7 +439,7 @@
     "    obs_scale=0.01,\n",
     ")\n",
     "\n",
-    "nuts_kernel = NUTS(model, full_mass=False, max_tree_depth=5, jit_compile=True) # high performacne params\n",
+    "nuts_kernel = NUTS(model, full_mass=False, max_tree_depth=5, jit_compile=True) # high performacne config\n",
     "\n",
     "mcmc = MCMC(nuts_kernel, num_samples=100, warmup_steps=100)\n",
     "obs = get_obs(data, 0, 2, y=True)\n",
