attemot at cyclic model

--- a/operator_inversion/operator_inversion.ipynb
+++ b/operator_inversion/operator_inversion.ipynb
@@ -30,17 +30,16 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from math import sqrt, ceil\n",
+    "from math import sqrt, ceil, floor\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "import h5py\n",
     "\n",
     "import torch\n",
     "import torch.fft as fft\n",
     "import torch.nn as nn\n",
     "from torch.optim import AdamW\n",
     "from torch.nn.modules.loss import MSELoss\n",
+    "from torch.functional import F \n",
     "\n",
     "from src.nn_modules.fourier_2d_generic import SimpleBlock2dGeneric\n",
     "from src.heatmap import multi_heatmap\n",
@@ -63,8 +62,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data_file = h5py.File(resolve_path('./data/grf_forcing_pico.h5'))\n",
-    "# data = data_file['valid']\n",
     "data = np.load('./data/grf_forcing_single.npz')\n",
     "\n",
     "def get_obs(data, t=0, n_steps=2, y=False):\n",
@@ -100,7 +97,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "def multi_img_time(x, batch=0, interval=1, n_cols=None, fsize=6):\n",
+    "def multi_img_plot_time(x, batch=0, interval=1, n_cols=None, fsize=6):\n",
     "    \"\"\"\n",
     "    Plot multiple timesteps of an array (time last)\n",
     "    \"\"\"\n",
@@ -118,10 +115,13 @@
     "    plt.tight_layout()\n",
     "    return fig\n",
     "\n",
-    "def multi_img_batch(x, interval=1, n_cols=None, fsize=6):\n",
+    "def multi_img_plot_batch(x, interval=1, n_cols=None, fsize=6):\n",
     "    \"\"\"\n",
     "    Plot multiple batches of an array \n",
     "    \"\"\"\n",
+    "    if len(x.shape) == 4:\n",
+    "        x = np.squeeze(x, -1)\n",
+    "\n",
     "    steps = range(0, x.shape[0], interval)\n",
     "    if n_cols is None:\n",
     "        n_cols = len(steps)\n",
@@ -133,7 +133,17 @@
     "    for i, ax in zip(steps, axes):\n",
     "        ax.imshow(x[..., i])\n",
     "    plt.tight_layout()\n",
-    "    return fig"
+    "    return fig\n",
+    "\n",
+    "def img_plot(x, interval=1, n_cols=None, fsize=6):\n",
+    "    \"\"\"\n",
+    "    plot whatever image I can find\n",
+    "    \"\"\"\n",
+    "    x = np.squeeze(x, )\n",
+    "    plt.imshow(x)\n",
+    "    plt.gca().set_axis_off()\n",
+    "    plt.tight_layout()\n",
+    "    return plt.gcf()"
    ]
   },
   {
@@ -142,9 +152,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = get_obs(data, 0, 50)['x']\n",
+    "arr = get_obs(data, 0, -1)['x']\n",
     "\n",
-    "multi_img_time(arr, n_cols=4, interval=5);\n"
+    "multi_img_plot_time(arr, n_cols=5, interval=5);\n"
    ]
   },
   {
@@ -197,28 +207,8 @@
     "with torch.no_grad():\n",
     "    pred = predict_forward(obs['x'], obs['latent'], n_horizon=100, n_steps=2)\n",
     "\n",
-    "multi_img_time(pred.cpu().numpy(), n_cols=5, interval=5);\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "obs = get_obs(data, 0, 10)\n",
-    "obs['latent'].shape\n",
-    "obs['x'].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "multi_img_time(pred.cpu().numpy(), n_cols=5, interval=5);\n",
-    "plt.savefig('./fno_forward_predict_sheet.jpg')"
+    "multi_img_plot_time(pred.cpu().numpy(), n_cols=5, interval=5);\n",
+    "plt.savefig('./fno_forward_predict_sheet.jpg');"
    ]
   },
   {
@@ -243,14 +233,19 @@
     "        self.dims = dims\n",
     "        self.process_predictor = process_predictor\n",
     "        ## Do not fit the process predictor weights\n",
+    "        process_predictor.train(False)\n",
     "        for param in self.process_predictor.parameters():\n",
     "            param.requires_grad = False\n",
+    "            \n",
     "        self.latent = nn.Parameter(\n",
     "            torch.zeros(\n",
     "                (n_batch, *dims),\n",
     "                dtype=torch.float32\n",
     "            )\n",
     "        )\n",
+    "    \n",
+    "    def get_latent(self):\n",
+    "        return self.latent\n",
     "\n",
     "    def weights_init(self):\n",
     "        self.latent.data.normal_(0.0, 0.01)\n",
@@ -269,6 +264,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class CyclicLatent(nn.Module):\n",
+    "    def __init__(self,\n",
+    "            process_predictor: \"nn.Module\",\n",
+    "            dims = (256,256),\n",
+    "            modes = 17,\n",
+    "            n_batch: int=1):\n",
+    "        super().__init__()\n",
+    "        self.dims = dims\n",
+    "        self.modes = modes\n",
+    "        self.process_predictor = process_predictor\n",
+    "        ## Do not fit the process predictor weights\n",
+    "        process_predictor.train(False)\n",
+    "        for param in self.process_predictor.parameters():\n",
+    "            param.requires_grad = False\n",
+    "        \n",
+    "        self.latent_spect = nn.Parameter(\n",
+    "            torch.zeros(\n",
+    "                (n_batch, modes*2-1, modes, 2),\n",
+    "                dtype=torch.float32\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "    def get_latent(self):\n",
+    "        cplx_latent = torch.view_as_complex(self.latent_spect)\n",
+    "        ft_padded = F.pad(cplx_latent, (\n",
+    "            0,  # left\n",
+    "            self.dims[1]//2-self.modes, # right\n",
+    "            0, # top\n",
+    "            (self.dims[0]+1-self.modes), # bottom\n",
+    "        ), \"constant\", 0)\n",
+    "        \n",
+    "        #Return to physical space\n",
+    "        return torch.fft.irfft2(ft_padded, s=self.dims, norm=\"backward\")\n",
+    "\n",
+    "    def weights_init(self, scale=1.0):\n",
+    "        self.latent_spect.data.normal_(0.0, scale)\n",
+    "\n",
+    "    def forward(self, batch):\n",
+    "        batch = dict(**batch)\n",
+    "        batch['latent'] = self.get_latent()\n",
+    "        return self.process_predictor(batch)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = CyclicLatent(\n",
+    "    process_predictor,\n",
+    "    dims=obs['x'].shape[1:3],\n",
+    "    n_batch=1)\n",
+    "model.latent_spect.data[0,5,6,0] = 2\n",
+    "model.latent_spect.data[0,5,5,0] = 1\n",
+    "model.latent_spect.data[0,5,5,1] = 1\n",
+    "field = model.get_latent().cpu().detach().numpy()\n",
+    "field.shape\n",
+    "img_plot(field);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.latent_spect.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flatsig = torch.ones((256, 256))\n",
+    "flatft = torch.fft.rfft2(flatsig, norm='ortho')\n",
+    "flatft"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def fit(\n",
     "        batch,\n",
     "        model,\n",
@@ -276,9 +359,9 @@
     "        n_iter: int=20,\n",
     "        check_int: int=1,\n",
     "        clip_val = None,\n",
-    "        callback = lambda *x: None):\n",
+    "        init_scale=0.1):\n",
     "    model.train()\n",
-    "    model.weights_init()\n",
+    "    model.weights_init(init_scale)\n",
     "    loss_fn = nn.MSELoss()\n",
     "    big_loss_fn = nn.MSELoss(reduction='none')\n",
     "    scale = loss_fn(torch.zeros_like(batch['latent']), batch['latent']).item()\n",
@@ -300,8 +383,7 @@
     "            with torch.no_grad():\n",
     "                loss_v = loss.item()\n",
     "                # batchwise error\n",
-    "                big_loss_v = big_loss_fn(pred['forecast'], batch['y']).mean(dim=(1,2,3))\n",
-    "                big_error = big_loss_fn(model.latent, batch['latent']).mean(dim=(1,2))\n",
+    "                big_error = big_loss_fn(model.get_latent(), batch['latent']).mean(dim=(1,2))\n",
     "                big_relerr = torch.sqrt(big_error/scale)\n",
     "                error = big_error.mean().item()\n",
     "                relerr = sqrt(big_relerr.mean().item())\n",
@@ -309,9 +391,9 @@
     "                    f\"loss: {loss:.3e}, error: {error:.3e}, relerror: {relerr:.3e} [{i:>5d}/{n_iter:>5d}]\")\n",
     "\n",
     "                target =  batch['latent'][0, :, :].cpu().numpy()\n",
-    "                est =  model.latent[0, :, :].cpu().numpy()\n",
+    "                est =  model.get_latent()[0, :, :].cpu().numpy()\n",
     "                err_heatmap = target - est\n",
-    "                fig = multi_heatmap(\n",
+    "                multi_heatmap(\n",
     "                    [target, est, err_heatmap],\n",
     "                    [\"Target\", \"Estimate\", \"Error\"])\n",
     "                plt.show();\n",
@@ -338,13 +420,49 @@
     "loss_fn = nn.MSELoss()\n",
     "\n",
     "fit(\n",
-    "    dict_as_tensor(get_obs(data,t=0,n_steps=2,y=True)),\n",
+    "    dict_as_tensor(get_obs(data,t=10,n_steps=2,y=True)),\n",
     "    model,\n",
     "    optimizer,\n",
     "    n_iter=50,\n",
     "    check_int=10,\n",
     "    clip_val=None,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = CyclicLatent(\n",
+    "    process_predictor,\n",
+    "    dims=obs['x'].shape[1:3],\n",
+    "    n_batch=1)\n",
+    "optimizer = AdamW(\n",
+    "    model.parameters(),\n",
+    "    lr=0.25,\n",
+    "    weight_decay=0.01)\n",
+    "\n",
+    "loss_fn = nn.MSELoss()\n",
+    "\n",
+    "fit(\n",
+    "    dict_as_tensor(get_obs(data,t=10,n_steps=2,y=True)),\n",
+    "    model,\n",
+    "    optimizer,\n",
+    "    n_iter=250,\n",
+    "    check_int=10,\n",
+    "    clip_val=None,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.latent_spect.std()"
    ]
   },
   {
@@ -426,7 +544,7 @@
     "        #overwrite process predictor batch with my own latent\n",
     "        mean = self.process_predictor({\n",
     "            'x': X,\n",
-    "            'latent': self.latent.unsqueeze(0),\n",
+    "            'latent': self.get_latent().unsqueeze(0),\n",
     "        })['forecast']\n",
     "        return pyro.sample(\n",
     "            \"obs\", dist.Normal(mean, self.obs_scale).to_event(2),\n",
@@ -436,6 +554,76 @@
     "    process_predictor,\n",
     "    dims=obs['x'].shape[1:3],\n",
     "    prior_scale=0.01,\n",
+    "    obs_scale=0.01,\n",
+    ")\n",
+    "\n",
+    "nuts_kernel = NUTS(model, full_mass=False, max_tree_depth=5, jit_compile=True) # high performacne config\n",
+    "\n",
+    "mcmc = MCMC(nuts_kernel, num_samples=100, warmup_steps=100)\n",
+    "obs = get_obs(data, 0, 2, y=True)\n",
+    "mcmc.run(torch.as_tensor(obs['x']), torch.as_tensor(obs['y']))\n",
+    "mc_samples = {k: v.detach().cpu().numpy() for k, v in mcmc.get_samples().items()}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ProbCyclicLatent(nn.Module):\n",
+    "    def __init__(self,\n",
+    "            process_predictor: \"nn.Module\",\n",
+    "            dims = (256,256),\n",
+    "            modes = 17,\n",
+    "            n_batch: int=1,\n",
+    "            prior_scale=10.0,\n",
+    "            obs_scale = 0.01):\n",
+    "        super().__init__()\n",
+    "        self.dims = dims\n",
+    "        self.modes = modes\n",
+    "        self.process_predictor = process_predictor\n",
+    "        ## Do not fit the process predictor weights\n",
+    "        process_predictor.train(False)\n",
+    "        for param in self.process_predictor.parameters():\n",
+    "            param.requires_grad = False\n",
+    "        self.obs_scale = obs_scale\n",
+    "        self.latent_spect = PyroSample(\n",
+    "            dist.Normal(0, prior_scale).expand(\n",
+    "                (n_batch, modes*2-1, modes, 2)\n",
+    "            ).to_event(3))\n",
+    "        self.iftop = torch.meshgrid()  # TBC\n",
+    "\n",
+    "    def get_latent(self):\n",
+    "        ## complex values do not work in numpyro yet\n",
+    "        # cplx_latent = torch.view_as_complex(self.latent_spect)\n",
+    "        # ft_padded = F.pad(cplx_latent, (\n",
+    "        #     0,  # left\n",
+    "        #     self.dims[1]//2-self.modes, # right\n",
+    "        #     0, # top\n",
+    "        #     (self.dims[0]+1-self.modes), # bottom\n",
+    "        # ), \"constant\", 0)\n",
+    "        #\n",
+    "        #Return to physical space\n",
+    "        # return torch.fft.irfft2(ft_padded, s=self.dims, norm=\"backward\")\n",
+    "        return \n",
+    "\n",
+    "    def forward(self, X, y=None):\n",
+    "        #overwrite process predictor batch with my own latent\n",
+    "        mean = self.process_predictor({\n",
+    "            'x': X,\n",
+    "            'latent': self.get_latent().unsqueeze(0),\n",
+    "        })['forecast']\n",
+    "        pred =  pyro.sample(\n",
+    "            \"obs\", dist.Normal(mean, self.obs_scale).to_event(2),\n",
+    "            obs=y)\n",
+    "        print('pred', pred.shape)\n",
+    "        return pred\n",
+    "\n",
+    "model = ProbCyclicLatent(\n",
+    "    process_predictor,\n",
+    "    dims=obs['x'].shape[1:3],\n",
+    "    prior_scale=10.0,\n",
     "    obs_scale=0.01,\n",
     ")\n",
     "\n",
