tested on HPC; needed tweaks

--- a/primitives/05-regression_with_data.ipynb
+++ b/primitives/05-regression_with_data.ipynb
@@ -9,7 +9,8 @@
     "The examples in the previous notebook don’t really show much in the way of fancy prediction; for that we want to do some _regression_.\n",
     "We will follow the [pyro regression tutorial](http://pyro.ai/examples/bayesian_regression.html) but see also the McElreath book for a really nice discussion of this regression problem.\n",
     "\n",
-    "* http://pyro.ai/examples/predictive_deterministic.html"
+    "* Pyro does not really have a very good explanation for the `Predictive` class that we use here, but [you can work it out from their example](http://pyro.ai/examples/predictive_deterministic.html)\n",
+    "* The best introduction is IMO Florian Whilhelm’s [Bayesian Hierarchical Modelling at Scale](https://florianwilhelm.info/2020/10/bayesian_hierarchical_modelling_at_scale/), although that is for the (similar but not identical) numpyro rahter than pyro."
    ]
   },
   {
