--- a/operator_inversion/operator_inversion.ipynb
+++ b/operator_inversion/operator_inversion.ipynb
@@ -40,12 +40,14 @@
     "from torch.optim import AdamW\n",
     "from torch.nn.modules.loss import MSELoss\n",
     "from torch.functional import F \n",
+    "import debugpy\n",
+    "\n",
     "\n",
     "from src.nn_modules.fourier_2d_generic import SimpleBlock2dGeneric\n",
     "from src.heatmap import multi_heatmap\n",
     "from src.utils import resolve_path\n",
     "\n",
-    "# device = torch.device('cuda')\n",
+    "# device = torch.device('cuda')  # I can't make MCMC work on the GPU.\n",
     "device = torch.device('cpu')\n"
    ]
   },
@@ -152,9 +154,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = get_obs(data, 0, -1)['x']\n",
     "\n",
-    "multi_img_plot_time(arr, n_cols=5, interval=5);\n"
+    "multi_img_plot_time(get_obs(data, 0, -1)['x'], n_cols=5, interval=5);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_plot(get_obs(data, 0, -1)['latent']);"
    ]
   },
   {
@@ -197,6 +207,7 @@
     "def predict_forward(x, latent, n_horizon=1, n_steps=2):\n",
     "    x = torch.as_tensor(x).to(device)\n",
     "    latent = torch.as_tensor(latent).to(device)\n",
+    "    process_predictor.to(device)\n",
     "    for i in range(n_horizon):\n",
     "        pred = process_predictor({'x': x[...,-(n_steps):], 'latent': latent})['forecast']\n",
     "        x = torch.cat((x, pred), dim=-1)\n",
@@ -205,7 +216,7 @@
     "obs = get_obs(data, 0, 10)\n",
     "\n",
     "with torch.no_grad():\n",
-    "    pred = predict_forward(obs['x'], obs['latent'], n_horizon=100, n_steps=2)\n",
+    "    pred = predict_forward(obs['x'], obs['latent'], n_horizon=50, n_steps=2)\n",
     "\n",
     "multi_img_plot_time(pred.cpu().numpy(), n_cols=5, interval=5);\n",
     "plt.savefig('./fno_forward_predict_sheet.jpg');"
@@ -247,8 +258,8 @@
     "    def get_latent(self):\n",
     "        return self.latent\n",
     "\n",
-    "    def weights_init(self):\n",
-    "        self.latent.data.normal_(0.0, 0.01)\n",
+    "    def weights_init(self, scale=0.005):\n",
+    "        self.latent.data.normal_(0.0, scale)\n",
     "\n",
     "    def forward(self, batch):\n",
     "        #copy\n",
@@ -314,33 +325,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = CyclicLatent(\n",
-    "    process_predictor,\n",
-    "    dims=obs['x'].shape[1:3],\n",
-    "    n_batch=1)\n",
-    "model.latent_spect.data[0,5,6,0] = 2\n",
-    "model.latent_spect.data[0,5,5,0] = 1\n",
-    "model.latent_spect.data[0,5,5,1] = 1\n",
-    "field = model.get_latent().cpu().detach().numpy()\n",
-    "field.shape\n",
-    "img_plot(field);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.latent_spect.shape\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "flatsig = torch.ones((256, 256))\n",
     "flatft = torch.fft.rfft2(flatsig, norm='ortho')\n",
     "flatft"
@@ -361,6 +345,7 @@
     "        clip_val = None,\n",
     "        init_scale=0.1):\n",
     "    model.train()\n",
+    "    model.to(device)\n",
     "    model.weights_init(init_scale)\n",
     "    loss_fn = nn.MSELoss()\n",
     "    big_loss_fn = nn.MSELoss(reduction='none')\n",
@@ -426,6 +411,7 @@
     "    n_iter=50,\n",
     "    check_int=10,\n",
     "    clip_val=None,\n",
+    "    init_scale=0.01\n",
     ")"
    ]
   },
@@ -454,15 +440,6 @@
     "    check_int=10,\n",
     "    clip_val=None,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.latent_spect.std()"
    ]
   },
   {
@@ -540,29 +517,51 @@
     "            param.requires_grad = False\n",
     "        self.latent = PyroSample(dist.Normal(0, 0.01).expand(dims).to_event(2))\n",
     "\n",
+    "    def get_latent(self):\n",
+    "        return self.latent\n",
+    "\n",
     "    def forward(self, X, y=None):\n",
     "        #overwrite process predictor batch with my own latent\n",
     "        mean = self.process_predictor({\n",
     "            'x': X,\n",
-    "            'latent': self.get_latent().unsqueeze(0),\n",
+    "            'latent': self.get_latent().unsqueeze(0).to(device) #<- why needed?,\n",
     "        })['forecast']\n",
     "        return pyro.sample(\n",
     "            \"obs\", dist.Normal(mean, self.obs_scale).to_event(2),\n",
     "            obs=y)\n",
     "\n",
+    "obs = dict_as_tensor(get_obs(data, 0, 2, y=True))\n",
+    "\n",
     "model = ProbRasterLatent(\n",
-    "    process_predictor,\n",
+    "    process_predictor.to(device),\n",
     "    dims=obs['x'].shape[1:3],\n",
     "    prior_scale=0.01,\n",
     "    obs_scale=0.01,\n",
     ")\n",
-    "\n",
+    "model.to(device)\n",
     "nuts_kernel = NUTS(model, full_mass=False, max_tree_depth=5, jit_compile=True) # high performacne config\n",
     "\n",
-    "mcmc = MCMC(nuts_kernel, num_samples=100, warmup_steps=100)\n",
-    "obs = get_obs(data, 0, 2, y=True)\n",
-    "mcmc.run(torch.as_tensor(obs['x']), torch.as_tensor(obs['y']))\n",
+    "mcmc = MCMC(nuts_kernel, num_samples=100, warmup_steps=100, num_chains=1)\n",
+    "mcmc.run(obs['x'], obs['y'])\n",
     "mc_samples = {k: v.detach().cpu().numpy() for k, v in mcmc.get_samples().items()}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs['latent'].device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.process_predictor.to(device)\n"
    ]
   },
   {
@@ -693,6 +692,24 @@
     "        return fft.rfft2(Xp, s=self.dims, norm=\"ortho\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = CyclicLatent(\n",
+    "    process_predictor,\n",
+    "    dims=obs['x'].shape[1:3],\n",
+    "    n_batch=1)\n",
+    "model.latent_spect.data[0,5,6,0] = 2\n",
+    "model.latent_spect.data[0,5,5,0] = 1\n",
+    "model.latent_spect.data[0,5,5,1] = 1\n",
+    "field = model.get_latent().cpu().detach().numpy()\n",
+    "field.shape\n",
+    "img_plot(field);"
+   ]
   }
  ],
  "metadata": {
@@ -714,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
